--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,21 @@
-.boardInside {
+#numBoard {
     font-weight: bold;
+    font-size: 1.3em;
+}
+
+.arrData {
+    display: none;
+}
+
+table td {
+    width:23px;
+    text-align: center;
+}
+
+.inputs {
+    width:40px;
+}
+
+table th {
+    font-size: 0.5em;
 }
